// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteBar matches snapshot with abstain-heavy votes 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex h-2 rounded-full overflow-hidden bg-gray-100"
  >
    <div
      className="bg-emerald-500"
      style={
        {
          "width": "10%",
        }
      }
    />
    <div
      className="bg-rose-500"
      style={
        {
          "width": "10%",
        }
      }
    />
    <div
      className="bg-slate-400"
      style={
        {
          "width": "80%",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-3 gap-2 text-sm"
  >
    <div>
      <span
        className="text-gray-500"
      >
        For: 
      </span>
      <span
        className="font-medium text-emerald-600"
      >
        100
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Against: 
      </span>
      <span
        className="font-medium text-rose-600"
      >
        100
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Abstain: 
      </span>
      <span
        className="font-medium text-slate-500"
      >
        800
      </span>
    </div>
  </div>
</div>
`;

exports[`VoteBar matches snapshot with all-against votes 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex h-2 rounded-full overflow-hidden bg-gray-100"
  >
    <div
      className="bg-emerald-500"
      style={
        {
          "width": "0%",
        }
      }
    />
    <div
      className="bg-rose-500"
      style={
        {
          "width": "100%",
        }
      }
    />
    <div
      className="bg-slate-400"
      style={
        {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-3 gap-2 text-sm"
  >
    <div>
      <span
        className="text-gray-500"
      >
        For: 
      </span>
      <span
        className="font-medium text-emerald-600"
      >
        0
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Against: 
      </span>
      <span
        className="font-medium text-rose-600"
      >
        500
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Abstain: 
      </span>
      <span
        className="font-medium text-slate-500"
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`VoteBar matches snapshot with all-for votes 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex h-2 rounded-full overflow-hidden bg-gray-100"
  >
    <div
      className="bg-emerald-500"
      style={
        {
          "width": "100%",
        }
      }
    />
    <div
      className="bg-rose-500"
      style={
        {
          "width": "0%",
        }
      }
    />
    <div
      className="bg-slate-400"
      style={
        {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-3 gap-2 text-sm"
  >
    <div>
      <span
        className="text-gray-500"
      >
        For: 
      </span>
      <span
        className="font-medium text-emerald-600"
      >
        1,000
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Against: 
      </span>
      <span
        className="font-medium text-rose-600"
      >
        0
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Abstain: 
      </span>
      <span
        className="font-medium text-slate-500"
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`VoteBar matches snapshot with mixed votes 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex h-2 rounded-full overflow-hidden bg-gray-100"
  >
    <div
      className="bg-emerald-500"
      style={
        {
          "width": "60%",
        }
      }
    />
    <div
      className="bg-rose-500"
      style={
        {
          "width": "30%",
        }
      }
    />
    <div
      className="bg-slate-400"
      style={
        {
          "width": "10%",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-3 gap-2 text-sm"
  >
    <div>
      <span
        className="text-gray-500"
      >
        For: 
      </span>
      <span
        className="font-medium text-emerald-600"
      >
        600
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Against: 
      </span>
      <span
        className="font-medium text-rose-600"
      >
        300
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Abstain: 
      </span>
      <span
        className="font-medium text-slate-500"
      >
        100
      </span>
    </div>
  </div>
</div>
`;

exports[`VoteBar matches snapshot with zero votes 1`] = `
<div
  className="space-y-2"
>
  <div
    className="flex h-2 rounded-full overflow-hidden bg-gray-100"
  >
    <div
      className="bg-emerald-500"
      style={
        {
          "width": "0%",
        }
      }
    />
    <div
      className="bg-rose-500"
      style={
        {
          "width": "0%",
        }
      }
    />
    <div
      className="bg-slate-400"
      style={
        {
          "width": "0%",
        }
      }
    />
  </div>
  <div
    className="grid grid-cols-3 gap-2 text-sm"
  >
    <div>
      <span
        className="text-gray-500"
      >
        For: 
      </span>
      <span
        className="font-medium text-emerald-600"
      >
        0
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Against: 
      </span>
      <span
        className="font-medium text-rose-600"
      >
        0
      </span>
    </div>
    <div>
      <span
        className="text-gray-500"
      >
        Abstain: 
      </span>
      <span
        className="font-medium text-slate-500"
      >
        0
      </span>
    </div>
  </div>
</div>
`;
